--- a/Fragment/app/src/main/res/layout/fragment_second.xml
+++ b/Fragment/app/src/main/res/layout/fragment_second.xml
@@ -7,14 +7,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is Second Fragment"
+        android:text="This is Second Fragment"
         android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="25sp"/>
 
     <Button
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_secondFragment"
         android:layout_centerInParent="true"
