--- a/RelativeLayout/app/src/main/res/layout/activity_main.xml
+++ b/RelativeLayout/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -18,8 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_alignParentLeft="true"
+        android:layout_marginEnd="315dp"
+        android:layout_toStartOf="@+id/times"
         android:layout_toLeftOf="@id/dates" />
-    
+
     <Spinner
         android:id="@+id/times"
         android:layout_width="96dp"
