--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".WelcomeSlideCalendar"
+    android:background="#FFFFFF"
+    android:context:>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/calendar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_eventlist" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="@font/montserrat_semi_bold"
-        android:text="DTS KOMINFO"
-        android:textSize="20sp"
+        android:text="Welcome to DTS VSGA"
+        android:textColor="#031313"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/calendar" />
+</android.support.constraint.ConstraintLayout>".WelcomeSlideCalendar">
+
 </android.support.constraint.ConstraintLayout>
