--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WelcomeSlideCalendar"
-    android:background="#FFFFFF"
-    android:context:>
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/calendar"
@@ -31,6 +30,53 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendar" />
-</android.support.constraint.ConstraintLayout>".WelcomeSlideCalendar">
 
+    <TextView
+        android:id="@+id/sub_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_semi_bold"
+        android:text="What is going to happen tomorrow ?"
+        android:textColor="#313131"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
+
+    <ImageView
+        android:id="@+id/background_satu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/bg_red" />
+
+    <TextView
+        android:id="@+id/login_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="72dp"
+        android:fontFamily="@font/montserrat_semi_bold"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/background_satu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_get_started"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/button_white"
+        android:fontFamily="@font/montserrat_semi_bold"
+        android:text="GET STARTED"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/login_txt"
+        app:layout_constraintEnd_toEndOf="@+id/background_satu"
+        app:layout_constraintStart_toStartOf="@+id/background_satu" />
 </android.support.constraint.ConstraintLayout>
