--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_back.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_back.xml
@@ -82,4 +82,33 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
 
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="24dp"
+        android:text="@string/forgot_password"
+        android:textColor="#313131"
+        android:textSize="18sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edt_txt_password"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:textSize="18sp"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/button_red"
+        android:text="LOG IN"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password"
+        android:layout_marginTop="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
 </android.support.constraint.ConstraintLayout>
