--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_forgot_password.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".WelcomeBack">
+    tools:context=".ForgotPassword">
 
     <TextView
         android:id="@+id/welcome_back"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:fontFamily="@font/montserrat_semi_bold"
-        android:text="Welcome Back"
+        android:text="@string/forgot_password"
         android:textColor="#313131"
         android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,77 +23,40 @@
 
     <TextView
         android:id="@+id/sign_in"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_light"
-        android:text="@string/sign_in_to_continue"
+        android:text="Please enter your email below to recieve your password reset instruction"
         android:textColor="#9b9b9b"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcome_back" />
 
     <TextView
-        android:id="@+id/txt_username"
+        android:id="@+id/reset_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="48dp"
-        android:text="Username"
+        android:text="@string/username"
         android:textColor="#313131"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_in" />
 
     <EditText
-        android:id="@+id/edt_txt_username"
+        android:id="@+id/edt_reset_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
         android:hint="Enter Your Email"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_username" />
-
-    <TextView
-        android:id="@+id/txt_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Password"
-        android:textColor="#313131"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_txt_username" />
-
-    <EditText
-        android:id="@+id/edt_txt_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        android:hint="@string/enter_your_password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
-
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        android:text="@string/forgot_password"
-        android:textColor="#313131"
-        android:textSize="18sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_txt_password"
-        android:onClick="clickForgot"
+        app:layout_constraintTop_toBottomOf="@id/reset_code"
         />
 
     <Button
@@ -102,14 +65,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:textSize="18sp"
-        android:layout_marginBottom="200dp"
         android:background="@drawable/button_red"
-        android:text="LOG IN"
+        android:text="@string/send_request"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@id/edt_reset_code"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="postLogin"/>
+        />
 
 </android.support.constraint.ConstraintLayout>
