--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_reset_password.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".WelcomeBack">
+    tools:context=".ResetPassword">
 
     <TextView
         android:id="@+id/welcome_back"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:fontFamily="@font/montserrat_semi_bold"
-        android:text="Welcome Back"
+        android:text="Reset Password"
         android:textColor="#313131"
         android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,55 +23,58 @@
 
     <TextView
         android:id="@+id/sign_in"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="24dp"
         android:fontFamily="@font/montserrat_light"
-        android:text="@string/sign_in_to_continue"
+        android:text="@string/txt_reset"
         android:textColor="#9b9b9b"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcome_back" />
 
     <TextView
-        android:id="@+id/txt_username"
+        android:id="@+id/reset_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="48dp"
-        android:text="Username"
+        android:text="@string/reset_code"
         android:textColor="#313131"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_in" />
 
     <EditText
-        android:id="@+id/edt_txt_username"
+        android:id="@+id/edt_reset_code"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        android:hint="Enter Your Email"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_username" />
-
-    <TextView
-        android:id="@+id/txt_password"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:text="Password"
+        android:layout_marginRight="24dp"
+        android:hint="@string/enter_your_reset_code"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/reset_code"
+        />
+
+    <TextView
+        android:id="@+id/new_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/new_password"
         android:textColor="#313131"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_txt_username" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_reset_code" />
 
     <EditText
-        android:id="@+id/edt_txt_password"
+        android:id="@+id/edt_new_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
@@ -80,20 +83,33 @@
         android:hint="@string/enter_your_password"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/new_password" />
 
     <TextView
-        android:id="@+id/forgot_password"
+        android:id="@+id/confirm_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/confirm_password"
+        android:textColor="#313131"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edt_new_password"
+        />
+
+    <EditText
+        android:id="@+id/edt_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
-        android:text="@string/forgot_password"
-        android:textColor="#313131"
-        android:textSize="18sp"
+        android:hint="@string/enter_your_password"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_txt_password"
-        android:onClick="clickForgot"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
+        android:layout_marginBottom="62dp"
         />
 
     <Button
@@ -102,14 +118,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:textSize="18sp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/button_red"
-        android:text="LOG IN"
+        android:text="@string/change_password"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="postLogin"/>
+        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"
+        android:onClick="postChangePassword"/>
 
 </android.support.constraint.ConstraintLayout>
