--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_calendar.xml
@@ -63,7 +63,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/background_satu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="clickLogin"/>
 
     <Button
         android:id="@+id/btn_get_started"
@@ -78,5 +79,6 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/login_txt"
         app:layout_constraintEnd_toEndOf="@+id/background_satu"
-        app:layout_constraintStart_toStartOf="@+id/background_satu" />
+        app:layout_constraintStart_toStartOf="@+id/background_satu"
+        android:onClick="clickGetStarted"/>
 </android.support.constraint.ConstraintLayout>
