--- a/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_super_hero.xml
+++ b/dtschapter03-starter-master/app/src/main/res/layout/activity_welcome_slide_super_hero.xml
@@ -56,6 +56,7 @@
         android:textSize="18sp"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="72dp"
+        android:onClick="clickLogin"
         />
 
     <ImageView
@@ -83,6 +84,7 @@
         android:fontFamily="@font/montserrat_light"
         android:background="@drawable/button_white"
         android:layout_marginBottom="42dp"
+        android:onClick="clickGetStarted"
         />
 
 </android.support.constraint.ConstraintLayout>
