--- a/dtschapter04-starter-starter04/app/src/main/res/layout/activity_welcome_back.xml
+++ b/dtschapter04-starter-starter04/app/src/main/res/layout/activity_welcome_back.xml
@@ -102,21 +102,32 @@
         />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="24dp"
-        android:textSize="18sp"
-        android:layout_marginBottom="200dp"
         android:background="@drawable/button_red"
+        android:onClick="postLogin"
         android:text="@string/log_in"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        android:layout_marginTop="80dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="postLogin"
-        />
+        app:layout_constraintTop_toBottomOf="@id/forgot_password" />
 
     <!--Tambahkan untuk sign up-->
+    <TextView
+        android:id="@+id/tv_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="clickSignUp"
+        android:text="Sign up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 </android.support.constraint.ConstraintLayout>
