--- a/TheFirstAppself/app/src/main/res/layout/activity_login.xml
+++ b/TheFirstAppself/app/src/main/res/layout/activity_login.xml
@@ -110,6 +110,22 @@
         android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:onClick="clickLogin"
         />
+
+    <TextView
+        android:id="@+id/txt_sign_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Sign Up"
+        android:textColor="#313131"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_login"
+        android:onClick="clickSignUp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
