--- a/TheFirstAppself/app/src/main/res/layout/activity_sign_up.xml
+++ b/TheFirstAppself/app/src/main/res/layout/activity_sign_up.xml
@@ -125,6 +125,7 @@
         android:textSize="18sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edt_new_password"
+        android:onClick="clickLogin"
         />
 
     <Button
@@ -132,16 +133,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="24dp"
-        android:textSize="18sp"
-        android:layout_marginBottom="200dp"
         android:background="#6699FF"
+        android:onClick="clickSignUp"
         android:text="SIGN UP"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/txt_login"
-        android:layout_marginTop="80dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/txt_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
