--- a/TheFirstAppself/app/src/main/res/layout/activity_home_screen.xml
+++ b/TheFirstAppself/app/src/main/res/layout/activity_home_screen.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".HomeScreen">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvIsi"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/blue_line" />
+
     <ImageView
         android:id="@+id/blue_line"
         android:layout_width="416dp"
